zaklad horniho baneru

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
             <li><a href="#">Kontakt</a></li>
         </ul>
     </div>
+    <div class="banner">
+        <h1>Amazonka SPA</h1>
+        <h2>Odpočinek v centru Liberce</h2>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean vel massa quis mauris vehicula lacinia. Sed convallis magna eu sem. Itaque earum rerum hic tenetur a sapiente</p>
+    </div>
 </div>
 </body>
 </html>
