--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="bg">
+        
+    </div>
 <div id="website">
     <div id="header">
         <a class="logo" href="#">Název firmy</a>
@@ -17,7 +20,7 @@
             <li><a href="#">Kontakt</a></li>
         </ul>
     </div>
-    <div class="banner">
+    <div class="baner">
         <h1>Amazonka SPA</h1>
         <h2>Odpočinek v centru Liberce</h2>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean vel massa quis mauris vehicula lacinia. Sed convallis magna eu sem. Itaque earum rerum hic tenetur a sapiente</p>
