--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="bg">
-        
+
     </div>
 <div id="website">
     <div id="header">
@@ -21,8 +21,8 @@
         </ul>
     </div>
     <div class="baner">
-        <h1>Amazonka SPA</h1>
-        <h2>Odpočinek v centru Liberce</h2>
+        <h1>Fossil Games</h1>
+        <h2>Vývojářské studio ze SŠ</h2>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean vel massa quis mauris vehicula lacinia. Sed convallis magna eu sem. Itaque earum rerum hic tenetur a sapiente</p>
     </div>
 </div>
