--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
 <div id="website">
     <div id="header">
-        <a class="logo" href="#">Název firmy</a>
+        <a class="logo" href="#">Fossil Games</a>
         <ul class="menu">
             <li><a href="#">Úvod</a></li>
             <li><a href="#">O nás</a></li>
