predelani celeho html a css

--- a/index.html
+++ b/index.html
@@ -7,24 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="bg">
-
-    </div>
 <div id="website">
-    <div id="header">
-        <a class="logo" href="#">Fossil Games</a>
+    <header>
+        <div class="logo">
+            <img src="img/Logo.png" alt="Fossil Games">
+        </div>
+        <nav>
         <ul class="menu">
             <li><a href="#">Úvod</a></li>
             <li><a href="#">O nás</a></li>
             <li><a href="#">Produkty</a></li>
             <li><a href="#">Kontakt</a></li>
         </ul>
-    </div>
-    <div class="baner">
-        <h1>Fossil Games</h1>
-        <h2>Vývojářské studio ze SŠ</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean vel massa quis mauris vehicula lacinia. Sed convallis magna eu sem. Itaque earum rerum hic tenetur a sapiente</p>
-    </div>
+        </nav>
+    </header>
 </div>
 </body>
 </html>
