--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Fossil Games</title>
 </head>
 <body>
 <div id="website">
     <header>
         <div class="logo">
-            <img src="img/Logo.png" alt="Fossil Games">
+            <img src="img/logo1.png" alt="Fossil Games">
         </div>
         <nav>
         <ul class="menu">
@@ -21,6 +21,10 @@
         </ul>
         </nav>
     </header>
+    <div class="banner">
+        <h1>Vítejte na naší webové stránce</h1>
+        <p>Nabízíme kvalitní hry</p>
+    </div>
 </div>
 </body>
 </html>
