--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </ul>
         </nav>
     </header>
-    <div class="banner">
+    <div class="banner banner-text">
         <h1>Vítejte na naší webové stránce</h1>
         <p>Nabízíme kvalitní hry</p>
     </div>
