--- a/index.html
+++ b/index.html
@@ -7,24 +7,30 @@
     <title>Fossil Games</title>
 </head>
 <body>
-<div id="website">
-    <header>
-        <div class="logo">
-            <img src="img/logo1.png" alt="Fossil Games">
+
+    <div id="website">
+        <header>
+            <div class="logo">
+                <img src="img/logo1.png.png" alt="Fossil Games">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Úvod</a></li>
+                    <li><a href="#">O nás</a></li>
+                    <li><a href="#">Produkty</a></li>
+                    <li><a href="#">Kontakt</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <div class="banner">
+            <div class="banner-text">
+                <h1>Vítejte na naší webové stránce</h1>
+                <p>Nabízíme kvalitní hry</p>
+            </div>
         </div>
-        <nav>
-        <ul class="menu">
-            <li><a href="#">Úvod</a></li>
-            <li><a href="#">O nás</a></li>
-            <li><a href="#">Produkty</a></li>
-            <li><a href="#">Kontakt</a></li>
-        </ul>
-        </nav>
-    </header>
-    <div class="banner banner-text">
-        <h1>Vítejte na naší webové stránce</h1>
-        <p>Nabízíme kvalitní hry</p>
+
     </div>
-</div>
+
 </body>
 </html>
