--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="website">
         <header>
             <div class="logo">
-                <img src="img/logo1.png.png" alt="Fossil Games">
+                <img src="img/logo1.png" alt="Fossil Games">
             </div>
             <nav>
                 <ul>
@@ -28,6 +28,10 @@
                 <h1>Vítejte na naší webové stránce</h1>
                 <p>Nabízíme kvalitní hry</p>
             </div>
+        </div>
+        <div style="max-width: 400px;padding: 50px;">
+            <h2>Dobrý den, toto je nápis</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam soluta laboriosam id qui et recusandae reiciendis, ratione, commodi harum saepe error dolor fugiat odio laudantium doloribus, expedita sint neque modi?</p>
         </div>
 
     </div>
