--- a/index.html
+++ b/index.html
@@ -1,63 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs-cz">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Fossil Games</title>
+    <title>David s.r.o.</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-
     <div id="website">
         <header>
             <div class="logo">
-                <img src="img/logo1.png" alt="Fossil Games">
+                <img src="img/logo1.png" alt="Logo Frimy">
             </div>
             <nav>
-                <ul>
+                <ul class="menu">
                     <li><a href="#">Úvod</a></li>
                     <li><a href="#">O nás</a></li>
                     <li><a href="#">Produkty</a></li>
                     <li><a href="#">Kontakt</a></li>
+                    <li><span class="theme-switch"></span></li>
                 </ul>
             </nav>
         </header>
-
-        <div class="banner">
-            <div class="banner-text">
+        <div class="baner">
+            <div class="baner-text">
                 <h1>Vítejte na naší webové stránce</h1>
-                <p>Nabízíme kvalitní hry</p>
+                <p>Nabízíme</p>
             </div>
-        </div>
-        <div style="max-width: 400px;padding: 50px;">
-            <h2>Dobrý den, toto je nápis</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam soluta laboriosam id qui et recusandae reiciendis, ratione, commodi harum saepe error dolor fugiat odio laudantium doloribus, expedita sint neque modi?</p>
         </div>
         <div class="features">
             <div class="feature">
                 <div class="feature-head">
-                    <icon><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="m1 18l.5-2H7l-.5 2zm2-4l.5-2H10l-.5 2zm15.575 6l.5-4l.725-6l.25-1.975zM6 22q-.825 0-1.412-.587T4 20h14.575L20.05 8.025H17.3l-.275 2.125q-.05.425-.375.663T15.9 11t-.662-.363t-.188-.737l.225-1.875H11.3l-.275 2.1q-.05.425-.375.675t-.75.2t-.675-.375t-.2-.75l.225-1.85H5.5q.1-.85.65-1.437T7.5 6h2q.2-1.875 1.288-2.937T13.75 2q1.6 0 2.663 1.188T17.45 6H20q.9.025 1.5.7t.475 1.575l-1.5 12q-.1.75-.663 1.238T18.5 22zm5.5-16h3.975q.025-.825-.562-1.412T13.5 4q-.875 0-1.388.538T11.5 6"/></svg></icon>
-                    <h3>Rychlé dodání</h3>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M12 17q1.65 0 2.825-1.175T16 13H8q0 1.65 1.175 2.825T12 17M7 9h4q0-.825-.587-1.412T9 7t-1.412.588T7 9m6 0h4q0-.825-.587-1.412T15 7t-1.412.588T13 9m-1 13q-1.875 0-3.512-.712t-2.85-1.925t-1.925-2.85T3 13V2h18v11q0 1.875-.712 3.513t-1.925 2.85t-2.85 1.925T12 22m0-2q2.9 0 4.95-2.05T19 13V4H5v9q0 2.9 2.05 4.95T12 20m0-8"/></svg>
+                    <h3>Nekorektní zábava</h3>
                 </div>
-                <p>Naše zboží doručíme do 24 hodin od dodání</p>
+                <p>Feature description</p>
             </div>
             <div class="feature">
                 <div class="feature-head">
-                    <icon><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="m1 18l.5-2H7l-.5 2zm2-4l.5-2H10l-.5 2zm15.575 6l.5-4l.725-6l.25-1.975zM6 22q-.825 0-1.412-.587T4 20h14.575L20.05 8.025H17.3l-.275 2.125q-.05.425-.375.663T15.9 11t-.662-.363t-.188-.737l.225-1.875H11.3l-.275 2.1q-.05.425-.375.675t-.75.2t-.675-.375t-.2-.75l.225-1.85H5.5q.1-.85.65-1.437T7.5 6h2q.2-1.875 1.288-2.937T13.75 2q1.6 0 2.663 1.188T17.45 6H20q.9.025 1.5.7t.475 1.575l-1.5 12q-.1.75-.663 1.238T18.5 22zm5.5-16h3.975q.025-.825-.562-1.412T13.5 4q-.875 0-1.388.538T11.5 6"/></svg></icon>
-                    <h3>Rychlé dodání</h3>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M12 17q1.65 0 2.825-1.175T16 13H8q0 1.65 1.175 2.825T12 17M7 9h4q0-.825-.587-1.412T9 7t-1.412.588T7 9m6 0h4q0-.825-.587-1.412T15 7t-1.412.588T13 9m-1 13q-1.875 0-3.512-.712t-2.85-1.925t-1.925-2.85T3 13V2h18v11q0 1.875-.712 3.513t-1.925 2.85t-2.85 1.925T12 22m0-2q2.9 0 4.95-2.05T19 13V4H5v9q0 2.9 2.05 4.95T12 20m0-8"/></svg>
+                    <h3>Nekorektní zábava</h3>
                 </div>
-                <p>Naše zboží doručíme do 24 hodin od dodání</p>
+                <p>Feature description</p>
             </div>
             <div class="feature">
                 <div class="feature-head">
-                    <icon><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="m1 18l.5-2H7l-.5 2zm2-4l.5-2H10l-.5 2zm15.575 6l.5-4l.725-6l.25-1.975zM6 22q-.825 0-1.412-.587T4 20h14.575L20.05 8.025H17.3l-.275 2.125q-.05.425-.375.663T15.9 11t-.662-.363t-.188-.737l.225-1.875H11.3l-.275 2.1q-.05.425-.375.675t-.75.2t-.675-.375t-.2-.75l.225-1.85H5.5q.1-.85.65-1.437T7.5 6h2q.2-1.875 1.288-2.937T13.75 2q1.6 0 2.663 1.188T17.45 6H20q.9.025 1.5.7t.475 1.575l-1.5 12q-.1.75-.663 1.238T18.5 22zm5.5-16h3.975q.025-.825-.562-1.412T13.5 4q-.875 0-1.388.538T11.5 6"/></svg></icon>
-                    <h3>Rychlé dodání</h3>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M12 17q1.65 0 2.825-1.175T16 13H8q0 1.65 1.175 2.825T12 17M7 9h4q0-.825-.587-1.412T9 7t-1.412.588T7 9m6 0h4q0-.825-.587-1.412T15 7t-1.412.588T13 9m-1 13q-1.875 0-3.512-.712t-2.85-1.925t-1.925-2.85T3 13V2h18v11q0 1.875-.712 3.513t-1.925 2.85t-2.85 1.925T12 22m0-2q2.9 0 4.95-2.05T19 13V4H5v9q0 2.9 2.05 4.95T12 20m0-8"/></svg>
+                    <h3>Nekorektní zábava</h3>
                 </div>
-                <p>Naše zboží doručíme do 24 hodin od dodání</p>
+                <p>Feature description</p>
+            </div>
+            <div class="feature">
+                <div class="feature-head">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M12 17q1.65 0 2.825-1.175T16 13H8q0 1.65 1.175 2.825T12 17M7 9h4q0-.825-.587-1.412T9 7t-1.412.588T7 9m6 0h4q0-.825-.587-1.412T15 7t-1.412.588T13 9m-1 13q-1.875 0-3.512-.712t-2.85-1.925t-1.925-2.85T3 13V2h18v11q0 1.875-.712 3.513t-1.925 2.85t-2.85 1.925T12 22m0-2q2.9 0 4.95-2.05T19 13V4H5v9q0 2.9 2.05 4.95T12 20m0-8"/></svg>
+                    <h3>Nekorektní zábava</h3>
+                </div>
+                <p>Feature description</p>
+            </div>
+            <div class="feature">
+                <div class="feature-head">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M12 17q1.65 0 2.825-1.175T16 13H8q0 1.65 1.175 2.825T12 17M7 9h4q0-.825-.587-1.412T9 7t-1.412.588T7 9m6 0h4q0-.825-.587-1.412T15 7t-1.412.588T13 9m-1 13q-1.875 0-3.512-.712t-2.85-1.925t-1.925-2.85T3 13V2h18v11q0 1.875-.712 3.513t-1.925 2.85t-2.85 1.925T12 22m0-2q2.9 0 4.95-2.05T19 13V4H5v9q0 2.9 2.05 4.95T12 20m0-8"/></svg>
+                    <h3>Nekorektní zábava</h3>
+                </div>
+                <p>Feature description</p>
+            </div>
+            <div class="feature">
+                <div class="feature-head">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M12 17q1.65 0 2.825-1.175T16 13H8q0 1.65 1.175 2.825T12 17M7 9h4q0-.825-.587-1.412T9 7t-1.412.588T7 9m6 0h4q0-.825-.587-1.412T15 7t-1.412.588T13 9m-1 13q-1.875 0-3.512-.712t-2.85-1.925t-1.925-2.85T3 13V2h18v11q0 1.875-.712 3.513t-1.925 2.85t-2.85 1.925T12 22m0-2q2.9 0 4.95-2.05T19 13V4H5v9q0 2.9 2.05 4.95T12 20m0-8"/></svg>
+                    <h3>Nekorektní zábava</h3>
+                </div>
+                <p>Feature description</p>
+            </div>
+            <div class="cta theme-primary">
+
             </div>
         </div>
-
-    </div>
-
+        <footer>
+            <div class="footer-container">
+                <div class="footer-links">
+                    <a href="#">Domů</a>
+                    <a href="#">O nás</a>
+                    <a href="#">Kontakt</a>
+                </div>
+                <div class="footer-social">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+                <p>&copy; 2024 TváWebovka. Všechna práva vyhrazena.</p>
+            </div>
+        </footer>
+        <script>
+            
+        </script>
 </body>
 </html>
