--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>David s.r.o.</title>
+    <title>Martin s.r.o.</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
@@ -75,6 +75,24 @@
 
             </div>
         </div>
+        <div class="container">
+            <div class="block">
+                <img src="https://thisimagedoesnotexist.com/images/82.jpeg" alt="Služba 1">
+                <h3>Toto je nadpis</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+            </div>
+            <div class="block block-reverse">
+                <img src="https://thisimagedoesnotexist.com/images/267.jpeg" alt="Služba 2">
+                <h3>Toto je nadpis</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+            </div>
+            <div class="block">
+                <img src="https://thisimagedoesnotexist.com/images/6.jpeg" alt="Služba 3">
+                <h3>Toto je nadpis</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+            </div>
+        </div>
+        <br>
         <footer>
             <div class="footer-container">
                 <div class="footer-links">
