--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <a href="#"><i class="fab fa-twitter"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
                 </div>
-                <p>&copy; 2024 TváWebovka. Všechna práva vyhrazena.</p>
+                <p>&copy; 2024 Martin Číhal. Všechna práva vyhrazena.</p>
             </div>
         </footer>
         <script>
