presmerovani na kontakt

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="#">Úvod</a></li>
                     <li><a href="#">O nás</a></li>
                     <li><a href="#">Produkty</a></li>
-                    <li><a href="#">Kontakt</a></li>
+                    <li><a href="#kontakt">Kontakt</a></li>
                     <li><span class="theme-switch"></span></li>
                 </ul>
             </nav>
@@ -104,7 +104,7 @@
                     </div>
 
                 </div>
-                <div class="contact-info">
+                <div class="contact-info" id="kontakt">
                     <h3>Kontaktujte nás</h3>
                     <a href="tel:+420984654234">Tel: +420 894 654 234</a><br>
                     <a href="e-mail:martin.cihal@academicschool.cz">E-mail: martin.cihal@academicschool.cz</a>
