--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
                 <p>Nabízíme</p>
             </div>
         </div>
+        <div class="callta">
+            <h2>Proč si vybrat naše produkty?</h2>
+            <p>Naše firma nabízí nejzábavnější indie hry pro pravé gurmány nekorektního humoru</p>
+        </div>
         <div class="features">
             <div class="feature">
                 <div class="feature-head">
@@ -70,9 +74,6 @@
                     <h3>Nekorektní zábava</h3>
                 </div>
                 <p>Feature description</p>
-            </div>
-            <div class="cta theme-primary">
-
             </div>
         </div>
         <div class="container">
