predelavka produktu a upravy

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
             </div>
             <nav>
                 <ul class="menu">
-                    <li><a href="#">Úvod</a></li>
-                    <li><a href="#">O nás</a></li>
-                    <li><a href="#">Produkty</a></li>
+                    <li><a href="#uvod">Úvod</a></li>
+                    <li><a href="#onas">O nás</a></li>
+                    <li><a href="#produkty">Produkty</a></li>
                     <li><a href="#kontakt">Kontakt</a></li>
                     <li><span class="theme-switch"></span></li>
                 </ul>
             </nav>
         </header>
-        <div class="baner">
+        <div class="baner" id="uvod">
             <div class="baner-text">
                 <h1>Vítejte na naší webové stránce</h1>
                 <p>Nabízíme</p>
@@ -30,6 +30,7 @@
         </div>
         <div class="callta">
             <h2>Proč si vybrat naše produkty?</h2>
+            <br>
             <p>Naše firma nabízí nejzábavnější indie hry pro pravé gurmány nekorektního humoru</p>
         </div>
         <div class="features">
@@ -76,21 +77,37 @@
                 <p>Feature description</p>
             </div>
         </div>
+        <br>
+        <div class="container" id="produkty">
+            <img class="container-img" src="https://thisimagedoesnotexist.com/images/82.jpeg" alt="obrázek">
+            <div class="container-content">
+                <h2>Operace Europa</h2>
+                <br>
+                <p>Masivní demonstrace, převraty a degenerace liberální demokracie způsobily chaos v zemích prvního světa. Agent Květoslav Líbal je vyslán americkou agenturou do rozvrácené Evropy. V nasazení plní úkoly, ve kterých se americká vláda snaží ještě více destabilizovat tak rozvrácenou Evropu.</p>
+                <br>
+                <button>Chci vědět víc!</button>
+            </div>
+        </div>
+        <br>
+        <div class="container-reverse">
+            <img class="container-img" src="https://thisimagedoesnotexist.com/images/267.jpeg" alt="obrázek">
+            <div class="container-content">
+                <h2>Operation Bughouse</h2>
+                <br>
+                <p>Vláda Terranské federace se po útoku na buenos Aires rozhodla na odvetu. Mobilní pěchota se chystá na invazi domovské planety arachnidů pod jménem operace Bughouse. Jako voják se budeš muset poprat s nestvůrami tak ošklivými, že se ani v nejhorších snech nedokážeš představit.</p>
+                <br>
+                <button>Chci vědět víc!</button>
+            </div>
+        </div>
+        <br>
         <div class="container">
-            <div class="block">
-                <img src="https://thisimagedoesnotexist.com/images/82.jpeg" alt="Služba 1">
-                <h3>Toto je nadpis</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
-            </div>
-            <div class="block block-reverse">
-                <img src="https://thisimagedoesnotexist.com/images/267.jpeg" alt="Služba 2">
-                <h3>Toto je nadpis</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
-            </div>
-            <div class="block">
-                <img src="https://thisimagedoesnotexist.com/images/6.jpeg" alt="Služba 3">
-                <h3>Toto je nadpis</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+            <img class="container-img" src="https://thisimagedoesnotexist.com/images/82.jpeg" alt="obrázek">
+            <div class="container-content">
+                <h2>Operace Europa</h2>
+                <br>
+                <p>Masivní demonstrace, převraty a degenerace liberální demokracie způsobily chaos v zemích prvního světa. Agent Květoslav Líbal je vyslán americkou agenturou do rozvrácené Evropy. V nasazení plní úkoly, ve kterých se americká vláda snaží ještě více destabilizovat tak rozvrácenou Evropu.</p>
+                <br>
+                <button>Chci vědět víc!</button>
             </div>
         </div>
         <br>
