pridani prostredni casti stranky

--- a/index.html
+++ b/index.html
@@ -78,6 +78,19 @@
             </div>
         </div>
         <br>
+        <div class="cta theme-primary">
+            <h2>Zaujali jsme vás?</h2>
+            <br>
+            <button class="btn">Kontaktujte nás</button>
+        </div>
+        <br>
+        <div class="services-text">
+            <h2>Naše produkty</h2>
+            <br>
+            <p>Vyberte si z naší nabídky produktů</p>
+        </div>
+        <br>
+        <br>
         <div class="container" id="produkty">
             <img class="container-img" src="https://thisimagedoesnotexist.com/images/82.jpeg" alt="obrázek">
             <div class="container-content">
@@ -85,7 +98,7 @@
                 <br>
                 <p>Masivní demonstrace, převraty a degenerace liberální demokracie způsobily chaos v zemích prvního světa. Agent Květoslav Líbal je vyslán americkou agenturou do rozvrácené Evropy. V nasazení plní úkoly, ve kterých se americká vláda snaží ještě více destabilizovat tak rozvrácenou Evropu.</p>
                 <br>
-                <button>Chci vědět víc!</button>
+                <button class="button">Chci vědět víc!</button>
             </div>
         </div>
         <br>
@@ -96,7 +109,7 @@
                 <br>
                 <p>Vláda Terranské federace se po útoku na buenos Aires rozhodla na odvetu. Mobilní pěchota se chystá na invazi domovské planety arachnidů pod jménem operace Bughouse. Jako voják se budeš muset poprat s nestvůrami tak ošklivými, že se ani v nejhorších snech nedokážeš představit.</p>
                 <br>
-                <button>Chci vědět víc!</button>
+                <button class="button-reverse">Chci vědět víc!</button>
             </div>
         </div>
         <br>
@@ -107,7 +120,7 @@
                 <br>
                 <p>Masivní demonstrace, převraty a degenerace liberální demokracie způsobily chaos v zemích prvního světa. Agent Květoslav Líbal je vyslán americkou agenturou do rozvrácené Evropy. V nasazení plní úkoly, ve kterých se americká vláda snaží ještě více destabilizovat tak rozvrácenou Evropu.</p>
                 <br>
-                <button>Chci vědět víc!</button>
+                <button class="button">Chci vědět víc!</button>
             </div>
         </div>
         <br>
@@ -144,7 +157,7 @@
 
             </div>
             <div class="my-map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2613.803506066932!2d17.4717279349808!3d49.071369596722235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4713144138cbdae9%3A0xd3d4ac020fc270db!2zTcSbc3RhIE1heWVuIDE1MzYsIDY4NiAwMSBVaGVyc2vDqSBIcmFkacWhdMSbIDE!5e0!3m2!1scs!2scz!4v1739970308127!5m2!1scs!2scz" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2613.803506066932!2d17.4717279349808!3d49.071369596722235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4713144138cbdae9%3A0xd3d4ac020fc270db!2zTcSbc3RhIE1heWVuIDE1MzYsIDY4NiAwMSBVaGVyc2vDqSBIcmFkacWhdMSbIDE!5e0!3m2!1scs!2scz!4v1739970308127!5m2!1scs!2scz" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" alt="Google Maps"></iframe>
             </div>
         </footer>
         <script>
